--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 #Redirect
-Options +FollowSymLinks
-RedirectMatch ^/$ https://www.ahotech.xyz/main/
+RewriteBase /main
+#RedirectMatch ^/$ https://www.ahotech.xyz/main/
 
 
 </IfModule>
